no products message added

--- a/public/app/partials/evezplace/productSearch.html
+++ b/public/app/partials/evezplace/productSearch.html
@@ -80,7 +80,7 @@
                                 ng-change="pageChanged()">
                     </uib-pagination>
                 </div>
-                <div class="empty-section text-center" ng-if="products.length == 0">
+                <div class="empty-section text-center" ng-if="Products.length == 0">
                     <span class="fa fa-exclamation-circle" style="color: #e50880; font-size: 64px;"></span>
 
                     <h3 style="font-weight: 200">No products matches your search</h3>
