--- a/public/app/partials/profile/details/enhance.html
+++ b/public/app/partials/profile/details/enhance.html
@@ -167,7 +167,7 @@
         <form>
             <div class="form-group">
                 <textarea placeholder="About me" name="aboutme" id="aboutme" class="form-control input-lg"
-                          tabindex="5" ng-model="enhancedProfile.aboutme">
+                          tabindex="5" ng-model="enhancedProfile.aboutme" maxlength="255">
                 </textarea>
                 <span class="pull-right" ng-hide="enhancedProfile.aboutme == dirty" style="color:#E50880;">{{255 - enhancedProfile.aboutme.length}}</span>
             </div>
