--- a/public/app/partials/profile/profileSummary.html
+++ b/public/app/partials/profile/profileSummary.html
@@ -365,7 +365,7 @@
                 <div class="col-md-12 col-xs-12 summary-box-outer" style="margin-top:10px;">
                     <div class="col-md-12 col-xs-12 no-padding summary-box" style="margin-bottom:10px;">
                         <div class="col-md-12 col-xs-12 no-padding summary-header">
-                            <h5><i class="fa fa-sitemap"></i>&nbsp;&nbsp;You Online Mentions</h5>
+                            <h5><i class="fa fa-sitemap"></i>&nbsp;&nbsp;Your Online Mentions</h5>
                         </div>
                         <div class="col-md-12 col-xs-12 no-padding summary-content">
                             <br>
