--- a/public/app/partials/admin/addUserInfo.html
+++ b/public/app/partials/admin/addUserInfo.html
@@ -45,6 +45,7 @@
                                                 <div class="form-group">
                                                     <select ng-model="role" class="form-control input-lg"
                                                     style="margin-bottom: 5px; height: 45px" default-option="User Type" required>
+                                                        <option value="1">Editor</option>
                                                         <option value="2">Member</option>
                                                         <option value="3">Business</option>
                                                     </select>
