Breadcrumb mysite  will redirect to myprofile

--- a/public/app/partials/Community/community.html
+++ b/public/app/partials/Community/community.html
@@ -55,7 +55,7 @@
 <div class="col-md-12" style="margin-top: 10px;">
     <ul class="breadcrumb" style="background: transparent; padding-left: 0px" >
         <li><a href="#home">Home</a> <span class="divider"></span></li>
-        <li><a href="#profile/{{userId}}">Mysite</a></li>
+        <li><a href="#profile/myprofile/{{userId}}">Mysite</a></li>
         <li class="active">Build Community</li>
     </ul>
 </div>
