--- a/public/app/partials/Woice Comments/woicecomments.html
+++ b/public/app/partials/Woice Comments/woicecomments.html
@@ -1,7 +1,7 @@
 <div class="col-md-12" style="margin-top: 10px;">
     <ul class="breadcrumb" style="background: transparent; padding-left: 0px" >
         <li><a href="#home">Home</a> <span class="divider"></span></li>
-        <li><a href="#profile/{{userId}}">Mysite</a></li>
+        <li><a href="#profile/myprofile/{{userId}}">Mysite</a></li>
         <li><a href="#streamit">Stream It</a></li>
         <li class="active">Comments</li>
     </ul>
