--- a/public/app/evezplace.css
+++ b/public/app/evezplace.css
@@ -342,7 +342,18 @@
 
 .create-browse-section {
     text-transform: uppercase;
-    margin-bottom: 20px;
+}
+
+.create-browse-section button
+{
+    background-color: #692668;
+    color:#ffffff;
+}
+
+.create-browse-section button:hover
+{
+    background-color: #E50880;
+    color:#ffffff;
 }
 
 #store-button-section {
@@ -355,8 +366,8 @@
     text-align: left;
     font-weight: 500;
     font-size: 14px;
-    padding: 20px 20px;
-    margin-bottom: 10px;
+    padding: 10px 20px;
+    margin-bottom: 2px;
 }
 
 #btn-browse-store {
@@ -365,8 +376,8 @@
     text-align: left;
     font-weight: 500;
     font-size: 14px;
-    padding: 20px 20px;
-    margin-bottom: 10px;
+    padding: 10px 20px;
+    margin-bottom: 2px;
 }
 
 #btn-create-classifieds {
@@ -375,8 +386,8 @@
     text-align: left;
     font-weight: 500;
     font-size: 14px;
-    padding: 20px 20px;
-    margin-bottom: 10px;
+    padding: 10px 20px;
+    margin-bottom: 2px;
 }
 
 #btn-browse-classifieds {
@@ -385,8 +396,8 @@
     text-align: left;
     font-weight: 500;
     font-size: 14px;
-    padding: 20px 20px;
-    margin-bottom: 10px;
+    padding: 10px 20px;
+    margin-bottom: 2px;
 }
 
 .fa-2x {
