--- a/public/app/partials/evezplace/create_browse_partial.html
+++ b/public/app/partials/evezplace/create_browse_partial.html
@@ -4,10 +4,10 @@
         <div class="col-md-6">
             <div class="input-group add-on">
                 <div class="icon-addon addon-md">
-                    <input type="text" class="form-control" ng-model="SearchValue" placeholder="Search Products" style="height:62px;font-size:20px;" ng-enter="SearchProducts(SearchValue)">
+                    <input type="text" class="form-control" ng-model="SearchValue" placeholder="Search Products" style="height:42px;font-size:16px;margin-bottom:2px;" ng-enter="SearchProducts(SearchValue)">
                 </div>
                 <div class="input-group-btn">
-                    <button class="btn btn-default btn-popover" ng-click="SearchProducts(SearchValue)" style="left:1px;height:62px;">
+                    <button class="btn btn-default btn-popover" ng-click="SearchProducts(SearchValue)" style="left:1px;height:42px;margin-bottom:2px;">
                         <i class="fa fa-search"></i>
                     </button>
                 </div>
@@ -27,10 +27,10 @@
         <div class="col-md-6">
             <div class="input-group add-on">
                 <div class="icon-addon addon-md">
-                    <input type="text" class="form-control" placeholder="Search Products" style="height:62px;font-size:20px;">
+                    <input type="text" class="form-control" placeholder="Search Products" style="height:42px;font-size:16px;margin-bottom:2px;">
                 </div>
                 <div class="input-group-btn">
-                    <button class="btn btn-default btn-popover" ng-click="" style="left:1px;height:62px;">
+                    <button class="btn btn-default btn-popover" ng-click="" style="left:1px;height:42px;margin-bottom:2px;">
                         <i class="fa fa-search"></i>
                     </button>
                 </div>
