--- a/public/app/partials/profile/details/change_password.html
+++ b/public/app/partials/profile/details/change_password.html
@@ -132,7 +132,7 @@
                 <a href="#profile/{{userId}}/enhance" class="btn btn-block btn-default ">
                     <p>Enhance Profile Page</p>
                 </a>
-                <a href="#profile/{{userId}}/change_password" class="btn btn-default active">
+                <a href="#profile/{{userId}}/change_password" class="btn btn-default active" ng-show="checkforPasswordField">
                     <p>Change Password</p>
                 </a>
                 <a href="#profile/{{userId}}/myonline" class="btn btn-default ">
