--- a/public/app/partials/profile/details/online.html
+++ b/public/app/partials/profile/details/online.html
@@ -130,7 +130,7 @@
         <a href="#profile/{{userId}}/enhance" class="btn btn-block btn-default">
             <p>Enhance Profile Page</p>
         </a>
-        <a href="#profile/{{userId}}/change_password" class="btn btn-default">
+        <a href="#profile/{{userId}}/change_password" class="btn btn-default" ng-show="checkforPasswordField">
             <p>Change Password</p>
         </a>
         <a href="#profile/{{userId}}/myonline" class="btn btn-default active">
