--- a/public/app/partials/profile/details/home.html
+++ b/public/app/partials/profile/details/home.html
@@ -136,7 +136,7 @@
         <a id="step2"  data-toggle="tab" data-slide-to="1" href="#profile/{{userId}}/enhance" class="btn btn-block btn-default">
             <p>Enhance Profile Page</p>
         </a>
-         <a href="#profile/{{userId}}/change_password" class="btn btn-default">
+         <a href="#profile/{{userId}}/change_password" class="btn btn-default" ng-show="checkforPasswordField">
             <p>Change Password</p>
         </a>
         <a id="step3"  data-toggle="tab" data-slide-to="2" href="#profile/{{userId}}/myonline" class="btn btn-default">
