--- a/public/app/partials/search/advancedSearch.html
+++ b/public/app/partials/search/advancedSearch.html
@@ -148,7 +148,7 @@
                 <div class="col-md-12" id="searchResults" style="margin-bottom: 40px; margin-top: 15px">
                     <div class="row search-result-section text-center" ng-if ="NoResult"><h4>No posts related to your search</h4></div>
                     <div class="row search-result-section">
-                        <div class="col-md-12 trending-section" ng-repeat="(key, post) in postSearchResult track by key" ng-if="post">
+                        <div class="col-md-12 trending-section" ng-repeat="post in postSearchResult" ng-if="post.deleted == 0">
                             <!--pro pic name and date-->
                             <div class="col-md-12 zero-padding-left-right" >
                                 <div class="col-md-1">
