--- a/public/app/partials/evezplace/browse/store/order-success.html
+++ b/public/app/partials/evezplace/browse/store/order-success.html
@@ -13,13 +13,13 @@
         </div>
     </div>
 
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-md-12" style="padding: 20px 80px">
             <p style="font-weight: 400; font-size: 1.2em">Store will contact you soon</p>
             <p style="font-weight: 400; font-size: 1.2em">Transaction code are as follows:</p>
             <p style="font-weight: 600; color: #e51385 ;font-size: 1.4em" ng-repeat="transactionId in transactions track by $index">{{transactionId}}</p>
         </div>
-    </div>
+    </div> -->
 
     <div class="row">
         <div class="col-sm-12">
